@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-01T08:23:15Z",
+  "timestamp" : "2022-10-01T16:23:45Z",
   "count_outdated" : 552,
   "uniques_outdated" : 318,
-  "count" : 586,
+  "count" : 587,
   "uniques" : 336,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-10-01T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
