@@ -1,3 +1,11 @@
+2022-10-01T16:23:45Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3165289802
+* notice: last 14d: unq all: 4 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 318 552 / 336 586
+* notice: next accum: outdated-unq outdated-all / unq all: 318 552 / 336 587
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-10-01]
+
 2022-10-01T08:23:15Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3163814721
 * notice: last 14d: unq all: 4 34
